--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=tienda
 server.port=80
+
+#Cambiar formato de la hora en la consola
+loggin.pattern.dateformat=hh::mm
+
+#Quitar el banner de spring en la consola
+spring.main.banner-mode=off
+
+#Para deshabilitar el cache de thymeleaf en desarrollo, en produccion si se habilita
+spring.thymeleaf.cache=false
