--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 .vscode/
 /src/main/resources/static/audios/musica.mp3
 /src/main/resources/static/videos/torpedo.mp4
+/src/main/resources/firebase/techshop-8fde3-firebase-adminsdk-udz8e-3afbacd8cf.json
