--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 /src/main/resources/static/audios/musica.mp3
 /src/main/resources/static/videos/torpedo.mp4
 /src/main/resources/firebase/techshop-8fde3-firebase-adminsdk-udz8e-3afbacd8cf.json
+/src/main/resources/firebase/techshop-8fde3-firebase-adminsdk-udz8e-1a63f7d7f4.json
